# cppproperty

./: .gitignore  CMakeLists.txt
examples/: CMakeLists.txt  simpleUsage.cpp
include/cppproperty/: property.h
tests/: CMakeLists.txt  CodeCoverage.cmake
